--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,6 +28,9 @@ a:hover {
 	color: var(--purple);
 }
 .card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	margin: 15px 15px 30px;
 	padding: 30px 50px;
 	color: var(--black);
@@ -35,24 +38,33 @@ a:hover {
 	background-color: var(--realwhite);
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
-
+.grid {
+	display: flex;
+	flex-wrap: wrap;
+}
 
 /****************************************************************
 **  X
 */
 
 table {
-	border: 1px solid lightgrey;
-	margin: 30px 10px;
+	/* border: 1px solid lightgrey; */
+	min-width: 180px;
+	margin: 5px 0 15px;
 }
 th,td {
-	padding: 0 10px;
-	text-align: center;
-	border-right: 1px solid lightgrey;
+	padding: 0 5px;
+	/* text-align: center; */
+	/* border-right: 1px solid lightgrey; */
 }
 th {
-	border-bottom: 1px solid lightgrey;
+	/* border-bottom: 1px solid lightgrey; */
 }
 .grey {
 	color: lightgrey;
+}
+.analysis {
+	display: flex;
+	/* flex-direction: column; */
+	/* flex-wrap: wrap; */
 }
