--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,33 +38,40 @@ a:hover {
 	background-color: var(--realwhite);
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+
+/****************************************************************
+**  PRODUCTS
+*/
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
 .grid {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 }
-
-/****************************************************************
-**  X
-*/
-
 table {
-	/* border: 1px solid lightgrey; */
 	min-width: 180px;
 	margin: 5px 0 15px;
 }
 th,td {
 	padding: 0 5px;
-	/* text-align: center; */
-	/* border-right: 1px solid lightgrey; */
-}
-th {
-	/* border-bottom: 1px solid lightgrey; */
 }
 .grey {
 	color: lightgrey;
 }
+
+/****************************************************************
+** DATA STRUCTURE ANALYSIS
+*/
 .analysis {
 	display: flex;
-	/* flex-direction: column; */
-	/* flex-wrap: wrap; */
+}
+.analysis .card {
+	align-items: flex-start;
+}
+.analysis .card div {
+	margin-bottom: 30px;
 }
