--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,6 +38,9 @@ a:hover {
 	background-color: var(--realwhite);
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+.navbar {
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
 
 /****************************************************************
 **  PRODUCTS
