create+store (con 302)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -45,7 +45,7 @@ a:hover {
 /****************************************************************
 **  PRODUCTS
 */
-main {
+main, form {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
